INTYGFV-14370: Move from Camel2 to Camel3 caurrent version.